--- a/Amazon_RDS_to_Supabase.ipynb
+++ b/Amazon_RDS_to_Supabase.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/mansueli/Supa-Migrate/blob/main/Amazon_RDS_to_Supabase.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -27,22 +12,22 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ul01YnnyiV0F"
+      },
       "source": [
         "![Supabase](https://raw.githubusercontent.com/supabase/supabase/master/packages/common/assets/images/supabase-logo-wordmark--light.svg)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "ul01YnnyiV0F"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Amazon RDS to Supabase migration guide"
-      ],
       "metadata": {
         "id": "FJ1MWneEiTHN"
-      }
+      },
+      "source": [
+        "#Amazon RDS to Supabase migration guide"
+      ]
     },
     {
       "cell_type": "code",
@@ -76,15 +61,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Set the environment Variables:"
-      ],
       "metadata": {
         "id": "M81eaqYTkMii"
-      }
+      },
+      "source": [
+        "## Set the environment Variables:"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ZrXH3C65kRxk"
+      },
+      "outputs": [],
       "source": [
         "#Source DB variables:\n",
         "%env HOST=my-aurora-cluster-instance.c1xy5example.123456789012.eu-central-1.rds.amazonaws.com\n",
@@ -95,64 +85,22 @@
         "#Supabase variables:\n",
         "%env SUPAVISOR_URL=postgres://postgres.project:[YOUR-PASSWORD]@aws-0-us-west-1.pooler.supabase.com:5432/postgres\n",
         "%env SUPABASE_PASSWORD=mypassword\n"
-      ],
-      "metadata": {
-        "id": "ZrXH3C65kRxk"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#@title #Running the Migration: { display-mode: \"form\" }\n",
-        "import os\n",
-        "\n",
-        "supabase_url = os.environ['SUPAVISOR_URL'].replace('[YOUR-PASSWORD]',os.environ['SUPABASE_PASSWORD'])\n",
-        "supabase_conn_str = f\"{supabase_url}\"\n",
-        "conn_str = f\"{os.environ['USER']}:{os.environ['PASSWORD']}@{os.environ['HOST']}:{os.environ['PORT']}/{os.environ['SOURCE_DB']}\"\n",
-        "if engine=='MySQL':\n",
-        "  mysql_conn_str = f\"mysql://{conn_str}\"\n",
-        "  !./pgloader/pgloader-3.6.9/build/bin/pgloader --before before.sql --after after.sql \"{mysql_conn_str}\" \"{supabase_conn_str}\"\n",
-        "if engine=='MS SQL':\n",
-        "  mssql_conn_str = f\"mssql://{conn_str}\"\n",
-        "  !./pgloader/pgloader-3.6.9/build/bin/pgloader --before before.sql --after after.sql \"{mssql_conn_str}\" \"{supabase_conn_str}\"\n",
-        "if engine=='SQLite':\n",
-        "  sqllite_conn_str = f\"sqllite://{conn_str}\"\n",
-        "  !./pgloader/pgloader-3.6.9/build/bin/pgloader --before before.sql --after after.sql \"{sqllite_conn_str}\" \"{supabase_conn_str}\"\n",
-        "if engine=='Postgres':\n",
-        "  sender_db = os.environ['SOURCE_DB']\n",
-        "  sender_user = os.environ['USER']\n",
-        "  sender_host = os.environ['HOST']\n",
-        "  sender_pgpass = os.environ['PASSWORD']\n",
-        "  filedata = ''\n",
-        "  with open('migrate_postgres_project.sh', 'r') as file :\n",
-        "    filedata = file.read()\n",
-        "    filedata = filedata.replace('POSTGRES_ORIGIN_USERNAME', sender_user)\n",
-        "    filedata = filedata.replace('POSTGRES_ORIGIN_PASSWORD', sender_pgpass.replace(\"PGPASSWORD=\",\"\"))\n",
-        "    filedata = filedata.replace('POSTGRES_ORIGIN_DATABASE', sender_db)\n",
-        "    filedata = filedata.replace('POSTGRES_ORIGIN_HOST', sender_host)\n",
-        "    filedata = filedata.replace('SUPABASE_HOST', os.environ[\"SUPAVISOR_URL\"])\n",
-        "    filedata = filedata.replace('SUPABASE_PASSWORD', os.environ['SUPABASE_PASSWORD'])\n",
-        "\n",
-        "  with open('migrate_postgres_project.sh', 'w') as file:\n",
-        "    file.write(filedata)\n",
-        "\n",
-        "  !bash ./migrate_postgres_project.sh #&>log\n",
-        "print(\"Migration completed\")"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "76XQI9t3q6ut",
-        "outputId": "319f366f-9627-4243-b150-233c7aa88d2e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "76XQI9t3q6ut",
+        "outputId": "319f366f-9627-4243-b150-233c7aa88d2e"
       },
-      "execution_count": 23,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "2024-01-23T18:09:15.037003Z LOG pgloader version \"3.6.7~devel\"\n",
             "2024-01-23T18:09:16.080102Z LOG Migrating from #<MYSQL-CONNECTION mysql://u958315775_UdUM6@srv818.hstgr.io:3306/u958315775_kMPKj {10070A9A43}>\n",
@@ -212,7 +160,59 @@
             "Migration completed\n"
           ]
         }
+      ],
+      "source": [
+        "#@title #Running the Migration: { display-mode: \"form\" }\n",
+        "import os\n",
+        "\n",
+        "supabase_url = os.environ['SUPAVISOR_URL'].replace('[YOUR-PASSWORD]',os.environ['SUPABASE_PASSWORD'])\n",
+        "supabase_conn_str = f\"{supabase_url}\"\n",
+        "conn_str = f\"{os.environ['USER']}:{os.environ['PASSWORD']}@{os.environ['HOST']}:{os.environ['PORT']}/{os.environ['SOURCE_DB']}\"\n",
+        "if engine=='MySQL':\n",
+        "  mysql_conn_str = f\"mysql://{conn_str}\"\n",
+        "  !./pgloader/pgloader-3.6.9/build/bin/pgloader --before before.sql --after after.sql \"{mysql_conn_str}\" \"{supabase_conn_str}\"\n",
+        "if engine=='MS SQL':\n",
+        "  mssql_conn_str = f\"mssql://{conn_str}\"\n",
+        "  !./pgloader/pgloader-3.6.9/build/bin/pgloader --before before.sql --after after.sql \"{mssql_conn_str}\" \"{supabase_conn_str}\"\n",
+        "if engine=='SQLite':\n",
+        "  sqllite_conn_str = f\"sqllite://{conn_str}\"\n",
+        "  !./pgloader/pgloader-3.6.9/build/bin/pgloader --before before.sql --after after.sql \"{sqllite_conn_str}\" \"{supabase_conn_str}\"\n",
+        "if engine=='Postgres':\n",
+        "  sender_db = os.environ['SOURCE_DB']\n",
+        "  sender_user = os.environ['USER']\n",
+        "  sender_host = os.environ['HOST']\n",
+        "  sender_pgpass = os.environ['PASSWORD']\n",
+        "  filedata = ''\n",
+        "  with open('migrate_postgres_project.sh', 'r') as file :\n",
+        "    filedata = file.read()\n",
+        "    filedata = filedata.replace('POSTGRES_ORIGIN_USERNAME', sender_user)\n",
+        "    filedata = filedata.replace('POSTGRES_ORIGIN_PASSWORD', sender_pgpass.replace(\"PGPASSWORD=\",\"\"))\n",
+        "    filedata = filedata.replace('POSTGRES_ORIGIN_DATABASE', sender_db)\n",
+        "    filedata = filedata.replace('POSTGRES_ORIGIN_HOST', sender_host)\n",
+        "    filedata = filedata.replace('SUPABASE_HOST', os.environ[\"SUPAVISOR_URL\"])\n",
+        "    filedata = filedata.replace('SUPABASE_PASSWORD', os.environ['SUPABASE_PASSWORD'])\n",
+        "\n",
+        "  with open('migrate_postgres_project.sh', 'w') as file:\n",
+        "    file.write(filedata)\n",
+        "\n",
+        "  !bash ./migrate_postgres_project.sh #&>log\n",
+        "print(\"Migration completed\")"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
